tests/scripts/type_errors/undefined_variable.roto
function foo() {
	let a = b;
}
